testsuite/tests/th/T14627.stderr

T14627.hs:4:1: error: Data constructor not in scope: Bool
